# os2webscanner

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  INSTALL  INSTALL.rst  NEWS  NEWS.rst  README  VERSION  install.sh  pyproject.toml  setup.cfg  setup.py  setup_prometheus_postgres.sh
config/: apache.conf
contrib/: OLD_NEWS.rst
cron/: README  cleanup_libreoffice_processes.sh  dispatch_summaries.sh  monitor_pm.sh  run_cron_script.sh
datascanner/: demo.py  queue-runner.py  url-explorer.py  url_explorer.py  webdemo.py
django-os2webscanner/: MANIFEST.in  setup.py
django-webscanner/: install.sh
doc/: HOWTO_ROLLOUT.rst  HOWTO_ROLLOUT.txt  HOWTO_START_DEVEL_SERVER.rst  HOWTO_START_DEVEL_SERVER.txt  INSTALL.rst  PYTHON_DEPENDENCIES  SYSTEM_DEPENDENCIES  TEST_DEPENDENCIES  conf.py  getting-started.rst  index.rst  news.rst  requirements-dev.txt  requirements.txt
mailscan/: mailscan_exchange.py  settings.py  stats.py
requirements/: requirements-dev.txt  requirements.txt  system_dependencies.txt  test_dependencies.txt
scrapy-measurer/: run.sh  scrapy.cfg
scrapy-webscanner/: cron.py  cron.sh  exchange_cronjob.py  exchange_scanner.py  linkchecker.py  mailscan_run.sh  process_manager.py  process_queue.py  run.py  run.sh  run_filescan.py  run_webscan.py  scanner_manager.py  settings.py  start_process_manager.sh  start_scanner_manager.sh  tests.py  unoconv  utils.py
setup/: admin_module_setup.sh  prometheus_setup.sh  report_module_setup.sh
src/: tests.py
system-scripts/: jenkins-django-commands.sh  makemessages.sh  postgresql-backup.sh
var/: .gitignore
(+1078 files in other folders)
