[metadata]
name = os2datascanner
version = file: VERSION
description = OS2datascanner for Danish municipalities
long_description = file: README
license = MPL
url = http://magenta.dk
author = Magenta ApS
author_email = info@magenta.dk

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
        # replace these appropriately if you are using Python 3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.6
scripts =
    bin/start_process_manager.sh
    bin/start_scanner_manager.sh
    bin/unoconv

[options.packages.find]
exclude =
    src.tests
where = src

[coverage:run]
branch = True
source =
     src/os2datascanner/
omit =
     src/os2datascanner/projects/admin/adminapp/migrations/*
     src/os2datascanner/projects/report/reportapp/migrations/*

[coverage:xml]
output = build/coverage.xml

[coverage:report]
precision = 2
sort = Cover
skip_covered = True
exclude_lines =
     raise NotImplementedError
     \bpass\b
